<resources>
    <string name="app_name">ImFitPlus</string>
    <string name="boas_vindas_titulo">Descubra seu Perfil de Saúde</string>
    <string name="boas_vindas_mensagem">Descubra seu perfil de saúde e receba recomendações personalizadas.</string>
    <string name="comece_aqui">Comece aqui</string>
    <string name="main_subtitle">Bem-vindo(a)</string>
    <string name="dados_pessoais_subtitle">Dados Pessoais</string>
    <string name="label_nome">Nome completo</string>
    <string name="label_idade">Idade (anos)</string>
    <string name="label_sexo">Sexo</string>
    <string name="radio_masculino">Masculino</string>
    <string name="radio_feminino">Feminino</string>
    <string name="label_altura">Altura (metros, ex: 1.75)</string>
    <string name="label_peso">Peso (kg, ex: 70.5)</string>
    <string name="label_nivel_atividade">Nível de Atividade</string>
    <string name="checkbox_confirmar">Confirmo que os dados estão corretos.</string>
    <string name="botao_calcular_imc">Calcular IMC</string>
    <string-array name="niveis_atividade">
        <item>Sedentário</item>
        <item>Leve </item>
        <item>Moderado</item>
        <item>Intenso</item>
    </string-array>
    <string name="erro_campo_vazio">Preencha todos os campos obrigatórios.</string>
    <string name="erro_dados_numericos">Altura, Peso e Idade devem ser números válidos e positivos.</string>
    <string name="botao_voltar">Voltar</string>
    <string name="resultado_imc_subtitle">Resultado do IMC</string>
    <string name="resultado_nome">Resultado para: %s</string>
    <string name="label_seu_imc">Seu IMC é</string>
    <string name="label_categoria_imc">Classificação</string>
    <string name="categoria_abaixo_peso">Abaixo do peso</string>
    <string name="categoria_normal">Normal</string>
    <string name="categoria_sobrepeso">Sobrepeso</string>
    <string name="categoria_obesidade">Obesidade</string>
    <string name="erro_dados_nao_encontrados">Erro ao carregar dados do perfil. Voltando à tela inicial.</string>
    <string name="botao_calcular_gasto_calorico">Calcular Gasto Calórico</string>
    <string name="gasto_calorico_subtitle">Gasto Calórico</string>
    <string name="titulo_gasto_calorico">Cálculo de Necessidade Calórica</string>
    <string name="valor_kcal_dia">%d kcal/dia</string>
    <string name="botao_calcular_peso_ideal">Calcular Peso Ideal</string>
    <string name="label_tmb">Taxa Metabólica Basal (TMB)</string>
    <string name="label_gasto_diario_total">Gasto Diário Total</string>
    <string name="peso_ideal_subtitle">Peso Ideal</string>
    <string name="titulo_peso_ideal">Sua Meta de Peso Ideal</string>
    <string name="label_peso_ideal">Peso Ideal</string>
    <string name="botao_finalizar_calculos">Finalizar e Voltar ao Início</string>
    <string name="label_diferenca_peso">Diferença de peso:</string>

    <string name="valor_peso_kg">%s kg</string>
    <string name="diferenca_perder_simples">Você precisa perder %1$s kg.</string>
    <string name="diferenca_ganhar_simples">Você precisa ganhar %1$s kg.</string>
    <string name="diferenca_ideal_simples">Parabéns! Seu peso está na faixa ideal.</string>
</resources>