<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar_in"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/titulo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boas_vindas_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/mensagem_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boas_vindas_mensagem"
        android:textAlignment="center"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/titulo_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/comecar_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comece_aqui"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>