<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesoIdealActivity">

    <include
        android:id="@+id/toolbar_in"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/titulo_principal_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_peso_ideal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/toolbar_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/peso_ideal_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:text="@string/label_peso_ideal"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/titulo_principal_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/peso_ideal_valor_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/peso_ideal_label_tv"
        app:layout_constraintStart_toStartOf="@id/peso_ideal_label_tv"
        tools:text="75.0 kg"/>

    <TextView
        android:id="@+id/diferenca_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_diferenca_peso"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/peso_ideal_valor_tv"
        app:layout_constraintStart_toStartOf="@id/peso_ideal_label_tv"/>

    <TextView
        android:id="@+id/diferenca_valor_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/diferenca_label_tv"
        app:layout_constraintStart_toStartOf="@id/diferenca_label_tv"
        tools:text="Você precisa perder 5.0 kg"/>

    <Button
        android:id="@+id/finalizar_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/botao_finalizar_calculos"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
