<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoImcActivity">

    <include
        android:id="@+id/toolbar_in"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/nome_resultado_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Resultado para: Nome do Usuário"/>

    <TextView
        android:id="@+id/imc_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_seu_imc"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/nome_resultado_tv"
        app:layout_constraintStart_toStartOf="@id/nome_resultado_tv"/>

    <TextView
        android:id="@+id/imc_valor_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imc_label_tv"
        app:layout_constraintStart_toStartOf="@id/imc_label_tv"
        tools:text="23.50"/>

    <TextView
        android:id="@+id/categoria_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_categoria_imc"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/imc_valor_tv"
        app:layout_constraintStart_toStartOf="@id/imc_label_tv"/>

    <TextView
        android:id="@+id/categoria_valor_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/categoria_label_tv"
        app:layout_constraintStart_toStartOf="@id/categoria_label_tv"
        app:layout_constraintEnd_toEndOf="@id/nome_resultado_tv"
        tools:text="Normal"/>

    <Button
        android:id="@+id/calcular_gasto_calorico_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/botao_calcular_gasto_calorico"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/voltar_bt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/voltar_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/botao_voltar"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>